<resources>
    <string name="app_name">WebServiceClient</string>
    <string name="googleBookApiButton">Book search</string>
    <string name="googleBookApiTextView">Type in a title or its portion to find a book and the author.</string>
    <string name="googleBookApiEditTextInput">Enter title here...</string>
    <string name="googleBookApiSearchButton">Begin search</string>
    <string name="loading">Loading...</string>
    <string name="nameDaysAPIGetTodayButton">Push the button to find out today\'s namedays in Poland.</string>
    <string name="nameDaysAPISearchInfo">Enter a name and push the button to find out on what dates it celebrates a nameday.</string>
    <string name="nameDaysAPISearchButtonHint">Enter name here</string>
    <string name="mainActivityNamedaysButton">Namedays</string>
    <string name="mainActivityRandomAdviceButton">Random advice</string>
    <string name="randomadviceAPIButton">Generate random advice</string>
    <string name="networkError">Please check your internet connection.</string>
    <string name="searchInputEmpty">No search term provided.</string>
    <string name="mainActivityRandomNameButton">Random names</string>
    <string name="randomnameAPIButton">Generate random name</string>
</resources>
